--- a/src/app/formly-form-core/fields/currency-input-field/currency-input-field.component.html
+++ b/src/app/formly-form-core/fields/currency-input-field/currency-input-field.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!to.encapsulateLabel" class="flex">
+<div *ngIf="to.showLabelAbove" class="flex">
   <label [for]="field.id" [innerHTML]="to.label + (to.required ? ' *' : '') | keepHtml"></label>
 
   <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
@@ -6,11 +6,11 @@
 
 <mat-form-field
   class="input-field"
-  [appearance]="to.encapsulateLabel && to.appearance ? to.appearance : 'outline'"
+  [appearance]="!to.showLabelAbove && to.appearance ? to.appearance : 'outline'"
   [floatLabel]="to.floatLabel || 'always'"
-  [ngClass]="{ 'no-label': !to.encapsulateLabel }">
+  [ngClass]="{ 'no-label': to.showLabelAbove }">
 
-  <mat-label *ngIf="to.encapsulateLabel">
+  <mat-label *ngIf="!to.showLabelAbove">
     {{ to.label }}
   </mat-label>
 
@@ -25,8 +25,9 @@
     (click)="formatCurrencyInput()"
     (blur)="formatCurrencyInput()"
     [id]="field.id!"
+    [required]="to.required ?? false"
     [spellcheck]="true"
-    [placeholder]="to.placeholder ?? ''"
+    [placeholder]="amountField?.templateOptions?.placeholder ?? ''"
     [formlyAttributes]="field"
     [tabindex]="to.tabindex || 0" />
 
