--- a/src/app/formly-form-core/fields/toggle-button-field/toggle-button-field.component.html
+++ b/src/app/formly-form-core/fields/toggle-button-field/toggle-button-field.component.html
@@ -8,6 +8,7 @@
   [id]="field.id!"
   [formlyAttributes]="field"
   [formControl]="formControl"
+  [required]="to.required ?? false"
   [tabindex]="to.tabindex || 0"
   [aria-label]="to.label"
   [vertical]="true"
