Resolved compile problems after upgrade

--- a/src/app/formly-form-core/components/errors-and-hints/errors-and-hints.component.html
+++ b/src/app/formly-form-core/components/errors-and-hints/errors-and-hints.component.html
@@ -7,6 +7,6 @@
   </ng-container>
 </mat-error>
 
-<mat-hint *ngIf="field?.templateOptions?.hint && !(validationMessage.errorMessage && field?.formControl?.touched)">
-  {{ field.templateOptions?.hint }}
+<mat-hint *ngIf="field?.props?.hint && !(validationMessage.errorMessage && field?.formControl?.touched)">
+  {{ field.props?.hint }}
 </mat-hint>
