--- a/src/app/formly-form-core/display-types/inner-form-container/inner-form-container.component.html
+++ b/src/app/formly-form-core/display-types/inner-form-container/inner-form-container.component.html
@@ -1,1 +1,1 @@
-<formly-field [field]="field" [ngClass]="field.templateOptions?.classes"></formly-field>
+<formly-field [field]="field" [ngClass]="field.props?.classes"></formly-field>
