--- a/src/app/formly-form-core/fields/display-html/display-html.component.html
+++ b/src/app/formly-form-core/fields/display-html/display-html.component.html
@@ -1,1 +1,1 @@
-<div class="noscrollX use-new-line" [ngClass]="to.classes" [innerHTML]="to.html | keepHtml"></div>
+<div class="noscrollX use-new-line" [ngClass]="props.classes" [innerHTML]="props.html | keepHtml"></div>
