--- a/src/app/formly-form-core/fields/text-input-field/text-input-field.component.html
+++ b/src/app/formly-form-core/fields/text-input-field/text-input-field.component.html
@@ -1,30 +1,30 @@
-<div *ngIf="to.showLabelAbove" class="flex">
-  <label [for]="field.id" [innerHTML]="to.label + (to.required ? ' *' : '') | keepHtml"></label>
+<div *ngIf="props.showLabelAbove" class="flex">
+  <label [for]="field.id" [innerHTML]="props.label + (props.required ? ' *' : '') | keepHtml"></label>
 
-  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
+  <mat-icon *ngIf="props.help" class="label-help" [matTooltip]="props.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
 </div>
 
 <mat-form-field
   class="input-field"
-  [appearance]="!to.showLabelAbove && to.appearance ? to.appearance : 'outline'"
-  [floatLabel]="to.floatLabel || 'always'"
-  [ngClass]="{ 'no-label': to.showLabelAbove }">
+  [appearance]="!props.showLabelAbove && props.appearance ? props.appearance : 'outline'"
+  [floatLabel]="props.floatLabel || 'always'"
+  [ngClass]="{ 'no-label': props.showLabelAbove }">
 
-  <mat-label *ngIf="!to.showLabelAbove">
-    {{ to.label }}
+  <mat-label *ngIf="!props.showLabelAbove">
+    {{ props.label }}
   </mat-label>
 
   <input matInput
     autocomplete="off"
     [id]="field.id!"
-    [type]="to.type || 'text'"
+    [type]="props.type || 'text'"
     [spellcheck]="true"
-    [maxlength]="to.maxlength || 256"
-    [required]="to.required ?? false"
-    [placeholder]="to.placeholder ?? ''"
-    [formControl]="formControl"
+    [maxlength]="props.maxlength || 256"
+    [required]="props.required ?? false"
+    [placeholder]="props.placeholder ?? ''"
+    [formControl]="$any(formControl)"
     [formlyAttributes]="field"
-    [tabindex]="to.tabindex || 0" />
+    [tabindex]="props.tabindex || 0" />
 </mat-form-field>
 
 <errors-and-hints [field]="field"></errors-and-hints>
