--- a/src/app/formly-form-core/schema-types/array-type/array-type.component.html
+++ b/src/app/formly-form-core/schema-types/array-type/array-type.component.html
@@ -1,1 +1,1 @@
-<formly-field *ngFor="let f of field.fieldGroup" [field]="f" [ngClass]="f.templateOptions?.classes"></formly-field>
+<formly-field *ngFor="let f of field.fieldGroup" [field]="f" [ngClass]="f.props?.classes"></formly-field>
