--- a/src/app/formly-form-json-schema-builder/components/dependency-builder/dependency-builder.component.html
+++ b/src/app/formly-form-json-schema-builder/components/dependency-builder/dependency-builder.component.html
@@ -1,4 +1,4 @@
-<div class="subheader">{{ to.label }}</div>
+<div class="subheader">{{ props.label }}</div>
 
 <div class="flex fill-width">
   <div class="top-buttons center-content" [style.margin-left]="'auto'">
