--- a/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.html
@@ -67,7 +67,7 @@
 
       <ng-template matExpansionPanelContent>
         <div class="pad-half">
-          <formly-field [field]="page" [ngClass]="page.templateOptions?.classes"></formly-field>
+          <formly-field [field]="page" [ngClass]="page.props?.classes"></formly-field>
         </div>
       </ng-template>
 
