--- a/src/app/formly-form-core/fields/date-input-field/date-input-field.component.html
+++ b/src/app/formly-form-core/fields/date-input-field/date-input-field.component.html
@@ -1,18 +1,18 @@
 <div class="flex">
-  <label [id]="field.id + '_label'" [innerHTML]="to.label + (to.required ? ' *' : '') | keepHtml"></label>
+  <label [id]="field.id + '_label'" [innerHTML]="props.label + (props.required ? ' *' : '') | keepHtml"></label>
 
-  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
+  <mat-icon *ngIf="props.help" class="label-help" [matTooltip]="props.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
 </div>
 
 <mat-form-field
   class="input-field"
-  [appearance]="to.appearance || 'outline'"
+  [appearance]="props.appearance || 'outline'"
   [ngClass]="{ 'mat-form-field-invalid': formControl.invalid && (formControl.dirty || formControl.touched) }">
 
   <custom-date-input
     [id]="field.id!"
     [describedBy]="field.id + '_label'"
-    [formControl]="formControl">
+    [formControl]="$any(formControl)">
   </custom-date-input>
 
   <input
