--- a/src/app/formly-form-json-schema-builder/modals/field-editor/field-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/modals/field-editor/field-editor.component.html
@@ -17,7 +17,7 @@
 
 <ng-container *ngIf="!categorySelectionComplete && categoryField; else editField">
   <div class="center-content column">
-    <formly-field [field]="categoryField" class="center-content" [ngClass]="categoryField.templateOptions?.className"></formly-field>
+    <formly-field [field]="categoryField" class="center-content" [ngClass]="categoryField.props?.className"></formly-field>
 
     <div class="margin-top-2">
       <button type="button" mat-raised-button color="primary" [disabled]="categoryField.formControl?.invalid" (click)="onSelectedCategory()">
@@ -29,7 +29,7 @@
 
 <ng-template #editField>
   <div class="field-content">
-    <formly-field [field]="field" [ngClass]="field.templateOptions?.classes"></formly-field>
+    <formly-field [field]="field" [ngClass]="field.props?.classes"></formly-field>
   </div>
 </ng-template>
 
