Cleanup from formly upgrade

--- a/src/app/formly-form-core/components/errors-and-hints/errors-and-hints.component.html
+++ b/src/app/formly-form-core/components/errors-and-hints/errors-and-hints.component.html
@@ -8,5 +8,5 @@
 </mat-error>
 
 <mat-hint *ngIf="field?.props?.hint && !(validationMessage.errorMessage && field?.formControl?.touched)">
-  {{ field.props?.hint }}
+  {{ field.props.hint }}
 </mat-hint>
