Modified field modal to remove newly added entry

--- a/src/app/formly-form-json-schema-builder/modals/field-editor/field-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/modals/field-editor/field-editor.component.html
@@ -33,11 +33,11 @@
   </div>
 </ng-template>
 
-<div class="flex row buttons" *ngIf="!field.formControl?.disabled; else showCloseOnly">
+<div class="flex row buttons" *ngIf="!field.formControl?.disabled && isNewlyAdded; else showCloseOnly">
   <button type="button" mat-button (click)="resetAndClose()">
     <div class="center flex row">
       <mat-icon class="material-icons-outlined margin-right-half" [inline]="true">undo</mat-icon>
-      <div>Revert & Close</div>
+      <div>Remove & Close</div>
     </div>
   </button>
 
